--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "acorn": "^7.4.1",
     "escape-html": "^1.0.3",
     "eslint-plugin-n": "^15.6.1",
+    "fsevents": "*",
     "i": "^0.3.7",
     "jss": "^10.9.2",
     "jss-preset-default": "^10.9.2",
@@ -104,6 +105,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^27.5.1",
     "jsdom": "^19.0.0",
     "lint-staged": "^12.5.0",
