back to isomorphic fetch

--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "acorn": "^7.4.1",
     "escape-html": "^1.0.3",
     "eslint-plugin-n": "^15.6.1",
-    "fsevents": "*",
     "i": "^0.3.7",
+    "isomorphic-fetch": "^3.0.0",
     "jss": "^10.9.2",
     "jss-preset-default": "^10.9.2",
     "mime-types": "^2.1.35",
@@ -107,7 +107,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
-    "jsdom": "^19.0.0",
+    "jsdom": "^21.1.1",
     "lint-staged": "^12.5.0",
     "nock": "^13.3.0",
     "react": "^17.0.2",
