--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "husky": "^7.0.4",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^27.5.1",
+    "jest-environment-jsdom": "^27.5.1",
     "jsdom": "^16.7.0",
     "lint-staged": "^12.5.0",
     "nock": "^13.4.0",
