--- a/package.json
+++ b/package.json
@@ -62,9 +62,8 @@
     "i": "^0.3.7",
     "mime-types": "^2.1.35",
     "npm": "^8.19.4",
-    "pane-registry": "^2.4.25",
-    "rdflib": "^2.2.33",
-    "solid-logic": "^3.0.6",
+    "pane-registry": "^2.4.26-beta1",
+    "solid-logic": "^3.0.7-beta1",
     "solid-namespace": "^0.5.3",
     "uuid": "^8.3.2"
   },
