--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-ui",
-  "version": "2.4.33-beta4",
+  "version": "2.4.33",
   "description": "UI library for writing Solid read-write-web applications",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
