--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/solidos/solid-ui"
+    "url": "git+https://github.com/solidos/solid-ui.git"
   },
   "keywords": [
     "solid",
