--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
     /* Basic Options */
     "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+    /* Crucial for library compatibility: */
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true, // Often helps with ESM interop
+    /* Crucial for library compatibility END */
     "lib": [
       "dom",
       "es2015",
