--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm test
-      - run: npm run doc
       - run: npm run build
+      - run: npm run doc
+      - run: npm run build-storybook
       - name: Save build
         if: matrix.node-version == '20.x'
         uses: actions/upload-artifact@v4
