--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "escape-html": "^1.0.3",
     "i": "^0.3.7",
     "mime-types": "^3.0.1",
-    "pane-registry": "file:../pane-registry",
+    "pane-registry": "^2.4.27",
     "rdflib": "^2.2.37",
-    "solid-logic": "file:../solid-logic",
+    "solid-logic": "^3.0.8",
     "solid-namespace": "^0.5.4",
     "uuid": "^11.1.0"
   },
