--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "watch": "npm run build-version && babel src --out-dir lib --watch --source-maps --extensions \".ts,.js\"",
     "clean": "rm -rf lib dist ./Documentation/form-examples/main.js",
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
-    "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\" --fix",
+    "lint": "eslint",
+    "lint-fix": "eslint --fix",
     "jest": "jest",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
     "test": "npm run build-version && npm run lint && npm run jest",
@@ -76,6 +76,8 @@
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-typescript": "^7.26.0",
     "@babel/runtime": "^7.26.7",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.32.0",
     "@mdx-js/react": "^2.3.0",
     "@storybook/addon-actions": "6.5.16",
     "@storybook/addon-docs": "6.5.16",
@@ -90,19 +92,18 @@
     "@types/jsdom": "^16.2.15",
     "@types/node": "^18.19.26",
     "@types/react": "^17.0.83",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "babel-loader": "^8.4.1",
     "crypto": "^1.0.1",
-    "eslint": "^8.57.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^26.9.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint": "^9.32.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-n": "^17.21.3",
+    "eslint-plugin-promise": "^7.2.1",
     "get-random-values": "^2.1.0",
+    "globals": "^16.3.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^7.0.4",
     "isomorphic-fetch": "^3.0.0",
@@ -110,6 +111,7 @@
     "jest-environment-jsdom": "^27.5.1",
     "jsdom": "^16.7.0",
     "lint-staged": "^12.5.0",
+    "neostandard": "^0.12.2",
     "nock": "^13.5.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -117,6 +119,7 @@
     "ts-jest": "^27.1.5",
     "typedoc": "^0.25.12",
     "typescript": "^4.9.5",
+    "typescript-eslint": "^8.39.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^4.10.0"
   },
