--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
     "prepublishOnly": "npm test && npm run build && npm run doc",
     "postpublish": "git push origin main --follow-tags",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook  --output-dir ./examples/storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build  --output-dir ./examples/storybook"
   },
   "repository": {
     "type": "git",
@@ -79,13 +79,13 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.32.0",
     "@mdx-js/react": "^2.3.0",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-docs": "6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/html": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/addon-actions": "7.6.20",
+    "@storybook/addon-docs": "7.6.20",
+    "@storybook/addon-essentials": "7.6.20",
+    "@storybook/addon-links": "7.6.20",
+    "@storybook/addon-mdx-gfm": "^7.6.20",
+    "@storybook/html": "7.6.20",
+    "@storybook/html-webpack5": "^7.6.20",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^30.0.0",
@@ -116,6 +116,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "storybook": "^7.6.20",
     "ts-jest": "^29.4.1",
     "typedoc": "^0.28.9",
     "typescript": "^5.9.2",
