imporved jest config and babel

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
     "lint": "eslint",
     "lint-fix": "eslint --fix",
-    "jest": "jest",
+    "jest": "jest --no-coverage",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
     "test": "npm run build-version && npm run lint && npm run jest",
     "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
@@ -88,6 +88,7 @@
     "@types/node": "^24.2.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "babel-jest": "^30.1.2",
     "babel-loader": "^10.0.0",
     "eslint": "^9.32.0",
     "eslint-import-resolver-typescript": "^4.4.4",
