improved webpack config & bundle & lint

--- a/package.json
+++ b/package.json
@@ -2,31 +2,30 @@
   "name": "solid-ui",
   "version": "2.6.0",
   "description": "UI library for writing Solid read-write-web applications",
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "main": "dist/solid-ui.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "lib",
-    "dist"
+    "dist/",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build-lib && npm run build-types && npm run build-version && npm run build-dev && npm run build-dist && npm run build-storybook",
-    "build-lib": "babel src -d lib --source-maps --extensions \".ts,.js\"",
+    "clean": "rm -rf ./dist ./src/versionInfo.ts ./Documentation/api",
+    "build": "npm run clean && npm run build-types && npm run build-version && npm run build-dist && npm run build-storybook",
     "build-types": "tsc --emitDeclarationOnly",
-    "build-version": "sh ./timestamp.sh > src/versionInfo.ts  && eslint \"src/versionInfo.ts\" --fix",
-    "build-dev": "webpack --progress",
+    "build-version": "sh ./timestamp.sh > src/versionInfo.ts  && eslint 'src/versionInfo.ts' --fix",
     "build-dist": "webpack --progress --mode=production",
-    "build-form-examples": "npm run build-lib && npm run build-dev && cp ./dist/*.js ./Documentation/form-examples/",
-    "watch": "npm run build-version && babel src --out-dir lib --watch --source-maps --extensions \".ts,.js\"",
-    "clean": "rm -rf lib dist ./Documentation/form-examples/main.js",
-    "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
+    "build-form-examples": "npm run build && cp ./dist/solid-ui.js ./Documentation/form-examples/",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
     "typecheck:test": "tsc --noEmit -p tsconfig.test.json",
-    "jest": "jest --no-coverage",
+    "test": "jest --no-coverage",
+    "test:coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "test": "npm run build-version && npm run lint && npm run jest",
+    "watch": "npm run build-version && babel src --out-dir dist --watch --source-maps --extensions '.ts,.js'",   
     "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
-    "prepublishOnly": "npm test && npm run build && npm run doc",
+    "prepublishOnly": "npm run build && npm test && npm run doc",
+    "preversion": "npm run lint && npm run typecheck && npm test",
     "postpublish": "git push origin main --follow-tags",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build  --output-dir ./examples/storybook"
