--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "LICENSE"
   ],
   "scripts": {
-    "clean": "rm -rf ./dist ./src/versionInfo.ts ./Documentation/api",
+    "clean": "rm -rf ./dist ./src/versionInfo.ts ./docs/api",
     "build": "npm run clean && npm run build-types && npm run build-version && npm run build-dist && npm run build-storybook",
-    "build-types": "tsc --emitDeclarationOnly",
     "build-version": "sh ./timestamp.sh > src/versionInfo.ts  && eslint 'src/versionInfo.ts' --fix",
+    "build-types": "tsc --emitDeclarationOnly",
     "build-dist": "webpack --progress --mode=production",
-    "build-form-examples": "npm run build && cp ./dist/solid-ui.js ./Documentation/form-examples/",
+    "build-form-examples": "npm run build-types && npm run build-version && npm run build-dist && cp ./dist/solid-ui.js ./docs/form-examples/",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
     "typecheck:test": "tsc --noEmit -p tsconfig.test.json",
@@ -23,7 +23,7 @@
     "test:coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
     "watch": "npm run build-version && babel src --out-dir dist --watch --source-maps --extensions '.ts,.js'",   
-    "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
+    "doc": "typedoc --out ./docs/api/ ./src/ --excludeInternal",
     "prepublishOnly": "npm run build && npm test && npm run doc",
     "preversion": "npm run lint && npm run typecheck && npm test",
     "postpublish": "git push origin main --follow-tags",
