transpile to dist

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist ./src/versionInfo.ts ./docs/api",
-    "build": "npm run clean && npm run build-types && npm run build-version && npm run build-dist && npm run build-storybook",
+    "build": "npm run clean && npm run build-version && npm run build-js && npm run build-dist && npm run postbuild-js && npm run build-storybook",
     "build-version": "sh ./timestamp.sh > src/versionInfo.ts && eslint 'src/versionInfo.ts' --fix",
-    "build-types": "tsc --emitDeclarationOnly",
+    "build-js": "tsc",
+    "postbuild-js": "rm -f dist/versionInfo.d.ts dist/versionInfo.d.ts.map",
     "build-dist": "webpack --progress --mode=production",
-    "build-form-examples": "npm run build-types && npm run build-version && npm run build-dist && cp ./dist/solid-ui.js ./docs/form-examples/",
+    "build-form-examples": "npm run build-js && npm run build-version && npm run build-dist && cp ./dist/solid-ui.js ./docs/form-examples/",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
     "typecheck:test": "tsc --noEmit -p tsconfig.test.json",
