--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "UI library for Solid applications",
   "main": "dist/solid-ui.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "files": [
     "dist/",
     "README.md",
