--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "storybook": "^7.6.20",
+    "terser-webpack-plugin": "^5.3.14",
     "ts-jest": "^29.4.1",
     "typedoc": "^0.28.9",
     "typescript": "^5.9.2",
