--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "build-form-examples": "npm run build-js && npm run build-version && npm run build-dist && cp ./dist/solid-ui.js ./docs/form-examples/",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
-    "typecheck:test": "tsc --noEmit -p tsconfig.test.json",
+    "typecheck-test": "tsc --noEmit -p tsconfig.test.json",
     "test": "jest --no-coverage",
-    "test:coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
-    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
+    "test-coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
+    "test-debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
     "watch": "npm run build-version && babel src --out-dir dist --watch --source-maps --extensions '.ts,.js'",
     "doc": "typedoc --out ./docs/api/ ./src/ --excludeInternal",
     "prepublishOnly": "npm run build && npm test && npm run doc",
