--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "escape-html": "^1.0.3",
     "i": "^0.3.7",
     "mime-types": "^3.0.1",
-    "pane-registry": "^2.5.1",
+    "pane-registry": "^2.5.1-685610f",
     "rdflib": "^2.2.37",
     "solid-logic": "^3.1.1-1d92309",
     "solid-namespace": "^0.5.4",
