--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,7 +58,8 @@
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     "typeRoots": [
       "node_modules/@types",
-      "node_modules/@testing-library"
+      "node_modules/@testing-library",
+      "declarations.d.ts"
     ] /* List of folders to include type definitions from. */,
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
@@ -75,7 +76,8 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "declarations.d.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
