--- a/package.json
+++ b/package.json
@@ -69,13 +69,13 @@
     "@noble/hashes": "^1.8.0",
     "escape-html": "^1.0.3",
     "mime-types": "^3.0.1",
-    "pane-registry": "^2.5.1-b6d15a2",
+    "pane-registry": "^2.5.1-f5c2189",
     "solid-namespace": "^0.5.4",
     "uuid": "^11.1.0"
   },
   "peerDependencies": {
     "rdflib": "^2.3.0",
-    "solid-logic": "3.1.1-e2f3838"
+    "solid-logic": "3.1.1-bf9b34c"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
@@ -88,10 +88,10 @@
     "@eslint/js": "^9.32.0",
     "@mdx-js/react": "^3.1.0",
     "@storybook/addon-actions": "7.6.20",
-    "@storybook/addon-docs": "7.6.20",
-    "@storybook/addon-essentials": "7.6.20",
+    "@storybook/addon-docs": "^7.6.20",
+    "@storybook/addon-essentials": "^7.6.20",
     "@storybook/addon-links": "7.6.20",
-    "@storybook/html": "7.6.20",
+    "@storybook/html": "^7.6.20",
     "@storybook/html-webpack5": "^7.6.20",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/user-event": "^13.5.0",
@@ -110,7 +110,7 @@
     "get-random-values": "^4.0.0",
     "globals": "^16.3.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^30.0.5",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.5",
     "jsdom": "^26.1.0",
     "neostandard": "^0.12.2",
@@ -119,7 +119,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "solid-logic": "^3.1.1-e2f3838",
+    "solid-logic": "^3.1.1-bf9b34c",
     "storybook": "^7.6.20",
     "terser-webpack-plugin": "^5.3.14",
     "typedoc": "^0.28.9",
