--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,10 @@ permissions:
 on:
   push:
     branches:
-      - "**"
+      - main
   pull_request:
     branches:
-      - "**"  
+      - main
   workflow_dispatch:
 
 jobs:
