--- a/package.json
+++ b/package.json
@@ -69,13 +69,13 @@
     "@noble/hashes": "^1.8.0",
     "escape-html": "^1.0.3",
     "mime-types": "^3.0.1",
-    "pane-registry": "^2.5.1-f5c2189",
+    "pane-registry": "^2.5.1-7862710",
     "solid-namespace": "^0.5.4",
     "uuid": "^11.1.0"
   },
   "peerDependencies": {
     "rdflib": "^2.3.0",
-    "solid-logic": "3.1.1-a44ca66"
+    "solid-logic": "^3.1.1-8dffdcb"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
@@ -119,7 +119,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "solid-logic": "^3.1.1-a44ca66",
+    "solid-logic": "^3.1.1-8dffdcb",
     "storybook": "^7.6.20",
     "terser-webpack-plugin": "^5.3.14",
     "typedoc": "^0.28.9",
