--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist ./src/versionInfo.ts ./docs/api",
-    "build-types": "tsc",
-    "build": "npm run clean && npm run typecheck && npm run build-version && npm run build-types && npm run build-dist && npm run build-js && npm run postbuild-js && npm run build-storybook",
+    "build": "npm run clean && npm run typecheck && npm run build-version && npm run build-dist && npm run build-js && npm run postbuild-js && npm run build-storybook",
     "build-version": "sh ./timestamp.sh > src/versionInfo.ts && eslint 'src/versionInfo.ts' --fix",
     "build-js": "tsc",
     "postbuild-js": "rm -f dist/versionInfo.d.ts dist/versionInfo.d.ts.map",
@@ -70,13 +69,13 @@
     "@noble/hashes": "^1.8.0",
     "escape-html": "^1.0.3",
     "mime-types": "^3.0.1",
-    "pane-registry": "^2.5.1-7862710",
+    "pane-registry": "^3.0.0",
     "solid-namespace": "^0.5.4",
     "uuid": "^11.1.0"
   },
   "peerDependencies": {
     "rdflib": "^2.3.0",
-    "solid-logic": "^3.1.1-8dffdcb"
+    "solid-logic": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
@@ -120,7 +119,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "solid-logic": "^3.1.1-8dffdcb",
+    "solid-logic": "^4.0.0",
     "storybook": "^7.6.20",
     "terser-webpack-plugin": "^5.3.14",
     "typedoc": "^0.28.9",
