--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         node-version:
           - 20.x
           - 22.x
+          - 24.x
     steps:
       - uses: actions/checkout@v6
       - name: Use Node.js ${{ matrix.node-version }}
@@ -31,7 +32,7 @@ jobs:
       - run: npm run build
       - run: npm run doc
       - name: Save build
-        if: matrix.node-version == '20.x'
+        if: matrix.node-version == '24.x'
         uses: actions/upload-artifact@v6
         with:
           name: build
@@ -75,7 +76,7 @@ jobs:
           name: build
       - uses: actions/setup-node@v6
         with:
-          node-version: 22.x
+          node-version: 24.x
           registry-url: 'https://registry.npmjs.org'
       - uses: rlespinasse/github-slug-action@v4.x
       - name: Append commit hash to package version
@@ -95,9 +96,9 @@ jobs:
           name: build
       - uses: actions/setup-node@v6
         with:
-          node-version: 22.x
+          node-version: 24.x
           registry-url: 'https://registry.npmjs.org'
       - name: Disable pre- and post-publish actions
         run: 'sed -i -E "s/\"((pre|post)publish)/\"ignore:\1/" package.json'
       - name: Publish to npm
-        run: npm publish --tag latest
+        run: npm publish
